# Flipkart_Product_Chatbot

./: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  setup.py
notebook/: notebook.ipynb
src/: RAG_Agent.py  config.py  data_converter.py  data_ingestion.py
